--- a/public/index.html
+++ b/public/index.html
@@ -54,19 +54,25 @@
         <h4>GET Developer JSON by URL</h4>
         <ol>
           <li>
-            <a href="http://localhost:3002/dev/findall">http://localhost:3002/dev/findall</a>
+            <a href="http://localhost:3004/dev/findall">http://localhost:3004/dev/findall</a>
           </li>
           <li>
-            <a href="http://localhost:3002/dev/findone/99">http://localhost:3002/dev/findone/99</a>
+            <a href="http://localhost:3004/dev/findone/99">http://localhost:3004/dev/findone/99</a>
           </li>
           <li>
-            <a href="http://localhost:3002/dev/findone/91">http://localhost:3002/dev/findone/91</a>
+            <a href="http://localhost:3004/dev/findone/91">http://localhost:3004/dev/findone/91</a>
           </li>
           <li>
-            <a href="http://localhost:3002/dev/findone/92">http://localhost:3002/dev/findone/92</a>
+            <a href="http://localhost:3004/dev/findone/92">http://localhost:3004/dev/findone/92</a>
           </li>
           <li>
-            <a href="http://localhost:3002/dev/findone/93">http://localhost:3002/dev/findone/93</a>
+            <a href="http://localhost:3004/dev/findone/93">http://localhost:3004/dev/findone/93</a>
+          </li>
+          <li>
+            <a href="http://localhost:3004/dev/findone/105">http://localhost:3004/dev/findone/105</a>
+          </li>
+          <li>
+            <a href="http://localhost:3004/sample">http://localhost:3004/sample page</a>
           </li>
         </ol>
       </div>
